--- a/src/app/component/wishlist/wishlist-items.component.html
+++ b/src/app/component/wishlist/wishlist-items.component.html
@@ -1,13 +1,18 @@
 <div *ngIf="items">
   <div class="container informationItems__container">
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center mb-3">
       <div class="wishlist__header-container p-4 col-10 col-md-7">
         <h3 *ngIf="WishlistTitle" class="d-flex justify-content-center wishlist__title">{{WishlistTitle}}</h3>
         <div class="d-flex justify-content-center">{{ WishlistDescription || ('WISHLIST_PROVIDE_A_DESCRIPTION' | translate) }}</div>
-        <div class="d-flex justify-content-center">
-          <a class="button__wrapper" (click)="deleteWishlist()">
-            <div class="button d-flex justify-content-center">Wunschliste löschen</div>
+        <div class="d-flex justify-content-center mt-3">
+          <a class="button__wrapper" (click)="deleteWishlistOrCancelDelete()">
+            <div class="button d-flex justify-content-center">
+              {{ (WishlistDeletionTimerActive ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_WISHLIST') | translate }}
+            </div>
           </a>
+        </div>
+        <div *ngIf="WishlistDeletionTimerActive" class="wishlist__item-delete-timer">
+          <div></div>
         </div>
       </div>
     </div>
@@ -23,16 +28,24 @@
               <a class="wishlist__item-title text-decoration-none fw-bold" href="{{ item?.url ?? '' }}" target="wishlist-item-{{ item?.id ?? '' }}">
                 {{ item?.title }}
               </a>
-              <div class="mt-2">{{ item?.description }}</div>
+              <div class="mt-2 wishlist__item-description">
+                <a class="text-decoration-none" href="{{ item?.url ?? '' }}" target="wishlist-item-{{ item?.id ?? '' }}">
+                  {{ item?.description }}
+                </a>
+              </div>
+              <div class="d-flex justify-content-center mt-2">
+                <a class="button__wrapper" (click)="removeItemOrCancelRemove(item)">
+                  <div class="button d-flex justify-content-center">
+                    {{ (isDeletionTimerActive(item) ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_ITEM_FROM_WISHLIST') | translate }}
+                  </div>
+                </a>
+              </div>
+              <div *ngIf="isDeletionTimerActive(item)" class="wishlist__item-delete-timer">
+                <div></div>
+              </div>
             </div>
         </div>
       </div>
-      <div class="col-2 mt-3">
-        <a class="button__wrapper" (click)="removeItem(item)">
-          <div class="button d-flex justify-content-center">entfernen</div>
-        </a>
-      </div>
-      <div class="col-10"></div>
     </div>
   </div>
 </div>
