--- a/src/app/component/wishlist/wishlist-items.component.html
+++ b/src/app/component/wishlist/wishlist-items.component.html
@@ -4,16 +4,25 @@
       <div class="wishlist__header-container p-4 col-10 col-md-7">
         <h3 *ngIf="WishlistTitle" class="d-flex justify-content-center wishlist__title">{{WishlistTitle}}</h3>
         <div class="d-flex justify-content-center">{{ WishlistDescription || ('WISHLIST_PROVIDE_A_DESCRIPTION' | translate) }}</div>
-        <div class="d-flex justify-content-center mt-3">
-          <a class="button__wrapper" (click)="deleteWishlistOrCancelDelete()">
-            <div class="button d-flex justify-content-center">
-              {{ (WishlistDeletionTimerActive ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_WISHLIST') | translate }}
-            </div>
-          </a>
-        </div>
-        <div *ngIf="WishlistDeletionTimerActive" class="wishlist__item-delete-timer">
-          <div></div>
-        </div>
+        <ng-container *ngIf="showAdministrativeControls">
+          <div class="d-flex justify-content-center mt-3">
+            <a class="button__wrapper" (click)="shareWishlistOrStopSharing()">
+              <div class="button d-flex justify-content-center">
+                {{ (WishlistIsShared ? 'WISHLIST_ACTION_STOP_SHARING_WISHLIST' : 'WISHLIST_ACTION_SHARE_WISHLIST') | translate }}
+              </div>
+            </a>
+          </div>
+          <div class="d-flex justify-content-center mt-3">
+            <a class="button__wrapper" (click)="deleteWishlistOrCancelDelete()">
+              <div class="button d-flex justify-content-center">
+                {{ (WishlistDeletionTimerActive ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_WISHLIST') | translate }}
+              </div>
+            </a>
+          </div>
+          <div *ngIf="WishlistDeletionTimerActive" class="wishlist__item-delete-timer">
+            <div></div>
+          </div>
+        </ng-container>
       </div>
     </div>
     <div class="row" *ngFor="let item of items">
@@ -33,25 +42,25 @@
                   {{ item?.description }}
                 </a>
               </div>
-              <div class="d-flex justify-content-center mt-2">
-                <a class="button__wrapper" (click)="removeItemOrCancelRemove(item)">
-                  <div class="button d-flex justify-content-center">
-                    {{ (isDeletionTimerActive(item) ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_ITEM_FROM_WISHLIST') | translate }}
-                  </div>
-                </a>
+              <div class="informationItems__disclaimer mt-2">
+                {{ 'PROVISION_DISCLAIMER' | translate }}
               </div>
-              <div *ngIf="isDeletionTimerActive(item)" class="wishlist__item-delete-timer">
-                <div></div>
-              </div>
+              <ng-container *ngIf="showAdministrativeControls">
+                <div class="d-flex justify-content-center mt-2">
+                  <a class="button__wrapper" (click)="removeItemOrCancelRemove(item)">
+                    <div class="button d-flex justify-content-center">
+                      {{ (isDeletionTimerActive(item) ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_ITEM_FROM_WISHLIST') | translate }}
+                    </div>
+                  </a>
+                </div>
+                <div *ngIf="isDeletionTimerActive(item)" class="wishlist__item-delete-timer">
+                  <div></div>
+                </div>
+              </ng-container>
             </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<div class="container pt-3 pb-3">
-  <div class="col-12 informationItems__disclaimer">
-    {{ 'PROVISION_DISCLAIMER' | translate }}
-  </div>
-</div>
+<div class="mt-5">&nbsp;</div>
