--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -25,7 +25,7 @@
           <div class="ps-1 header__iconWrapper">
             <i
               class="fa fa-heart {{userHasAtLeastOneWishlistItem ? '' : isModuleActive(Module.WISHLIST) ? 'header__icon--activeEmpty' : 'header__icon--empty'}} header__icon {{isModuleActive(Module.WISHLIST) ? 'fw-bold header__icon--active' : ''}}"
-              [routerLink]="['/wishlists']"
+              [routerLink]="WishlistLink"
             ></i>
           </div>
           <div class="ps-1 header__iconWrapper">
