--- a/src/app/component/wishlist/wishlist-item.component.html
+++ b/src/app/component/wishlist/wishlist-item.component.html
@@ -1,12 +1,27 @@
 <div class="row">
   <div class="col-12">
     <div class="row d-flex justify-content-center">
-        <div class="col-12 col-md-3 mt-3 d-flex justify-content-center align-items-center wishlist__item-image-container">
-          <a href="{{ item?.url ?? '' }}" target="wishlist-item-{{ item?.id ?? '' }}">
-            <img src="{{ item?.titleImage }}" class="wishlist__item-image" />
-          </a>
+        <div class="d-flex col-12 col-lg-3 mt-3">
+          <div class="row d-flex justify-content-center">
+            <a href="{{ item?.url ?? '' }}" class="d-flex col-12 justify-content-center align-items-center wishlist__item-image-container" target="wishlist-item-{{ item?.id ?? '' }}">
+              <div class="">
+                <img src="{{ item?.titleImage }}" class="wishlist__item-image" />
+              </div>
+            </a>
+            <ng-container *ngIf="showAdministrativeControls">
+              <a class="col-12 mt-2 mt-md-0 d-flex justify-content-center button__wrapper" (click)="removeItemOrCancelRemove(item)">
+                <div class="button button--critical d-flex justify-content-center" style="height: 2.5em; width: 15.5em;">
+                  {{ (isDeletionTimerActive(item) ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_ITEM_FROM_WISHLIST') | translate }}
+                </div>
+              </a>
+              <div *ngIf="isDeletionTimerActive(item)" class="col-12 wishlist__item-delete-timer">
+                <div></div>
+              </div>
+            </ng-container>
+          </div>
         </div>
-        <div class="col-12 col-md-6 ms-2 mt-3">
+
+        <div class="col-12 col-lg-6 ms-2 mt-3">
           <a class="wishlist__item-title text-decoration-none fw-bold" href="{{ item?.url ?? '' }}" target="wishlist-item-{{ item?.id ?? '' }}">
             {{ item?.title }}
           </a>
@@ -25,18 +40,6 @@
               </div>
             </a>
           </div>
-          <ng-container *ngIf="showAdministrativeControls">
-            <div class="d-flex justify-content-center mt-3">
-              <a class="button__wrapper" (click)="removeItemOrCancelRemove(item)">
-                <div class="button button--critical d-flex justify-content-center">
-                  {{ (isDeletionTimerActive(item) ? 'WISHLIST_ACTION_CANCEL_DELETION' : 'WISHLIST_ACTION_DELETE_ITEM_FROM_WISHLIST') | translate }}
-                </div>
-              </a>
-            </div>
-            <div *ngIf="isDeletionTimerActive(item)" class="wishlist__item-delete-timer">
-              <div></div>
-            </div>
-          </ng-container>
         </div>
     </div>
   </div>
