--- a/src/app/component/wishlist/wishlists.component.html
+++ b/src/app/component/wishlist/wishlists.component.html
@@ -21,9 +21,14 @@
 
   <app-loading *ngIf="isLoading"></app-loading>
   <div *ngIf="!isLoading" class="row w-100">
-    <div *ngFor="let wishlist of Wishlists" class="d-flex justify-content-center mt-5 col-md-4 col-12">
+    <div *ngFor="let wishlist of Wishlists" class="d-flex justify-content-center mt-4 col-md-4 col-12">
       <div class="row">
-        <div class="col-12 d-flex justify-content-center"><h4>{{ wishlist.title }}</h4></div>
+        <div class="col-12 d-flex justify-content-center">
+          <a class="button__wrapper mt-2" [routerLink]="['/', 'wishlist', wishlist.id ]">
+            <img src="assets/images/wishlists/{{wishlist.imageId.toLocaleLowerCase()}}.jpg" class="wishlists__wishlist-image" />
+          </a>
+        </div>
+        <div class="col-12 d-flex justify-content-center mt-3"><h4>{{ wishlist.title }}</h4></div>
         <div class="col-12 d-flex justify-content-center">{{ wishlist.description || ('WISHLIST_PROVIDE_A_DESCRIPTION' | translate) }}</div>
         <div class="col-12 d-flex justify-content-center">
           <a class="button__wrapper mt-2" [routerLink]="['/', 'wishlist', wishlist.id ]">
