--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -62,6 +62,7 @@ input[type='text'] {
     background-color: unset;
     border: 0;
     border-bottom: 1px solid #000;
+    color: $content-color;
     display: block;
     position: relative;
     top: -0.5vh;
