- exchanged wishlist icon

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -24,7 +24,7 @@
         <div class="d-inline-flex position-absolute header__icons">
           <div class="ps-1 header__iconWrapper">
             <i
-              class="fa fa-heart {{userHasAtLeastOneWishlistItem ? '' : isModuleActive(Module.WISHLIST) ? 'header__icon--activeEmpty' : 'header__icon--empty'}} header__icon {{isModuleActive(Module.WISHLIST) ? 'fw-bold header__icon--active' : ''}}"
+              class="fa fa-gift {{userHasAtLeastOneWishlistItem ? '' : isModuleActive(Module.WISHLIST) ? 'header__icon--activeEmpty' : 'header__icon--empty'}} header__icon {{isModuleActive(Module.WISHLIST) ? 'fw-bold header__icon--active' : ''}}"
               [routerLink]="WishlistLink"
             ></i>
           </div>
