--- a/src/app/component/wishlist/add-to-wishlist.component.html
+++ b/src/app/component/wishlist/add-to-wishlist.component.html
@@ -1,6 +1,6 @@
 <div class="item__wishlist {{ isItemOnWishlist ? 'item__wishlist--active' : ''}}">
   <i *ngIf="item?.itemId"
-    class="fa fa-heart item__wishlistIcon {{isItemOnWishlist ? 'e' : 'item__wishlistIcon--inactive'}} header__icon"
+    class="fa fa-gift item__wishlistIcon {{isItemOnWishlist ? 'e' : 'item__wishlistIcon--inactive'}} header__icon"
     (click)="toggleItem()"
   ></i>
 </div>
