--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -4,7 +4,7 @@ $container-color: #122947;
 $container-hint-background-color: orange;
 $content-color: #122947;
 $content-color--active: #DE5935;
-$font-family: Roboto, sans-serif;
+$font-family: Mulish, sans-serif;
 $header-footer-content-color: #122947;
 $page-background: #f3f4f2;
 $content-price-color: #DE5935;
