--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/variables';
 
 .app {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Mulish', sans-serif;
 }
 
 .app-content {
