--- a/src/app/component/item/item.component.scss
+++ b/src/app/component/item/item.component.scss
@@ -3,7 +3,7 @@
 
 .informationItem {
   font-size: 0.85em;
-  padding: 1.5em 0.5em 1.5em 0.5em;
+  padding: 0 0.5em 1.5em 0.5em;
   text-align: center;
   text-align: -webkit-center;
   width: 11em;
