--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app">
   <app-header></app-header>
-  <div class="app-content">
+  <div class="min-vh-100 align-items-center position-relative app-content">
     <dialog #gdprDialog id="gdprDialog" class="gdpr__dialog">
       <general-data-protection-regulation [gdprDialog]="gdprDialog"></general-data-protection-regulation>
     </dialog>
