--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,12 +5,10 @@
 }
 
 .app-content {
-  align-items: center;
   background-color: $page-background;
   color: #FFF;
   flex-direction: column;
-  position: relative;
-  top: 0em;
+  top: 0;
 
   &h1 {
     font-size: 2.0em;
