--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer w-100">
+<footer class="footer pb-2 w-100">
   <div class="container">
     <div class="row">
       <div class="d-flex justify-content-end">
