--- a/src/app/component/wishlist/wishlists.component.html
+++ b/src/app/component/wishlist/wishlists.component.html
@@ -1,16 +1,19 @@
 <div class="container wishlists__content">
-  <div class="row">
-    <div class="col-12 mt-4 mt-xl-3 p-3 wishlists__new-list" [formGroup]="form">
+  <div class="row d-flex justify-content-center">
+    <div class="col-11 col-xl-8 mt-4 mt-xl-3 p-3 wishlists__new-list" [formGroup]="form">
       <div class="row d-flex">
         <div class="col-12">
-          <h5 class="text-uppercase">{{ 'WISHLIST_NEW_WISHLIST' | translate }}</h5>
+          <h6 class="d-flex align-items-center text-uppercase fw-bold">
+            <i class="fa fa-clipboard-list fs-4 me-2"></i>
+            {{ 'WISHLIST_NEW_WISHLIST' | translate }}
+          </h6>
         </div>
       </div>
       <div class="row d-flex">
-        <div class="col-12 col-xl-8 d-flex mt-2 mt-xl-0">
+        <div class="col-12 col-xl-9 d-flex mt-2 mt-xl-0">
           <input type="text" placeholder="{{ 'WISHLIST_NAME_OF_WISHLIST' | translate }}" formControlName="wishlistTitle" />
         </div>
-        <div class="col-12 col-xl-2 mt-2 mt-xl-0">
+        <div class="col-12 col-xl-3 mt-2 mt-xl-0">
           <a class="button__wrapper" (click)="createWishlist()">
             <div class="button d-flex w-100 justify-content-center">{{ 'WISHLIST_ACTION_CREATE_WISHLIST' | translate }}</div>
           </a>
@@ -31,7 +34,7 @@
         <div class="col-12 d-flex justify-content-center mt-3"><h4>{{ wishlist.title }}</h4></div>
         <div class="col-12 d-flex justify-content-center">{{ wishlist.description || ('WISHLIST_PROVIDE_A_DESCRIPTION' | translate) }}</div>
         <div class="col-12 d-flex justify-content-center">
-          <a class="button__wrapper mt-2" [routerLink]="['/', 'wishlist', wishlist.id ]">
+          <a class="button__wrapper mt-2 mb-4" [routerLink]="['/', 'wishlist', wishlist.id ]">
             <div class="button">{{ 'WISHLIST_ACTION_GO_TO_WISHLIST' | translate }}</div>
           </a>
         </div>
