--- a/src/app/component/wishlist/wishlist-items.component.html
+++ b/src/app/component/wishlist/wishlist-items.component.html
@@ -2,7 +2,7 @@
   <div class="container informationItems__container">
     <div class="row d-flex justify-content-center mb-4">
       <div class="wishlist__header-container p-4 col-10 col-md-7" [formGroup]="form">
-        <div class="d-flex mt-2 mt-lg-0 justify-content-end">
+        <div class="d-flex mt-2 mt-lg-0 justify-content-center justify-content-xl-end">
           <a (click)="toggleEditMode()" role="button">
             {{ (editMode ? 'WISHLIST_ACTION_CANCEL_MANAGE_WISHLIST' : 'WISHLIST_ACTION_MANAGE_WISHLIST') | translate }}
           </a>
@@ -14,7 +14,7 @@
             class="w-100 wishlist__image"
           />
         </div>
-        <div *ngIf="!editMode">
+        <div *ngIf="!editMode" class="mt-2 mt-xl-0">
           <h3 *ngIf="WishlistTitle" class="d-flex justify-content-center wishlist__title">
             {{WishlistTitle}}
           </h3>
@@ -89,7 +89,7 @@
             <div class="mt-3">
               {{'WISHLIST_SHARE_LINK_FOR_FRIENDS_AND_FAMILY' | translate }}
             </div>
-            <div class="d-flex mt-1">
+            <div class="d-flex align-items-center mt-1">
               <input type="text" value="{{ShareLink}}" #shareLink>
               <i class="fa fa-copy fw-light ms-2" role="button" (click)="copyShareLinkToClipboard(shareLink)"></i>
             </div>
