--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -60,15 +60,14 @@ button:hover {
 
 input[type='text'] {
     background-color: unset;
-    border: 0;
-    border-bottom: 1px solid #000;
+    border: 1px solid lightgray;
     color: $content-color;
-    display: block;
-    position: relative;
-    top: -0.5vh;
+    height: 2.5em;
+    text-indent: 0.5em;
     width: 100%;
 
     &:focus {
+      border: 1px solid $content-color--active;
       caret-color: $content-color;
       outline: none;
     }
