--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
 
 .app-content {
   background-color: $page-background;
-  color: #FFF;
+  color: $content-color;
   flex-direction: column;
   top: 0;
 
