--- a/src/app/component/content/translations/manage-translations.component.html
+++ b/src/app/component/content/translations/manage-translations.component.html
@@ -12,9 +12,9 @@
     <div class="fw-bold">
       Übersetzungsschlüssel
     </div>
-    <div class="d-flex">
+    <div class="d-block d-lg-flex">
       <input class="me-2" value="{{newTranslationKey}}" (keyup)="updateNewTranslationKey($event)"/>
-      <div class="col-2 d-flex justify-content-center button" (click)="saveNewTranslation()">Hinzufügen</div>
+      <div class="col-8 mt-2 mt-lg-0 col-lg-2 d-flex justify-content-center button" (click)="saveNewTranslation()">Hinzufügen</div>
     </div>
   </div>
 
